# mpd-plasma-widget

./: .gitignore  Changelog
docs/: Keyboard Shortcuts.md  Manifesto.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/logic/: AppContext.qml  CoverManager.qml  ErrorHandler.qml  ExecGeneric.qml  ExecMpc.qml  MpdState.qml  PlaylistObject.qml  PlaylistUtils.qml  VolumeState.qml  coverHelpers.js  qmldir  songLibrary.js
package/contents/scripts/: coverHelpers.js  downloadCover.sh  formatHelpers.js  listManager.js  mpdPlasmaWidgetExec.py  songLibrary.js
package/contents/ui/: CoverManager.qml  MpdState.qml  Mpdw.js  WidgetApplication.qml  WidgetLayout.qml  WidgetPlaylistPage.qml  WidgetQueueFooter.qml  WidgetQueuePage.qml  configGeneral.qml  main.qml
package/contents/ui/Components/: ExecGeneric.qml  ExecMpc.qml  WidgetCoverImage.qml  WidgetLabel.qml
package/contents/ui/Components/Albumartists/: AlbumartistSongsPage.qml  AlbumartistsController.qml  AlbumartistsPage.qml
package/contents/ui/Components/Application/: ApplicationWindow.qml  MpdToggleAction.qml  MpdToggleOptionItem.qml  MpdToggleView.qml
package/contents/ui/Config/: configAppearance.qml  configGeneral.qml
release/: create-pling-plasmoid.sh
tests/: CMakeLists.txt  build.sh  run  tst_main.cpp
tests/Mocks/: MpdStateMock.qml  ServerResponse.qml
tests/cases/Elements/: tst_DynamicMenu.qml
tests/cases/Logic/: tst_MpdState.qml  tst_songLibrary.qml
tests/cases/Playlists/: tst_PlaylistPage.qml
tests/cases/Queue/: tst_QueueDialogReplacePl.qml
(+35 files in other folders)
